--- a/_config.yml
+++ b/_config.yml
@@ -18,16 +18,25 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-title: Your awesome title
-email: your-email@example.com
+title: Que increible TITULO
+email: ssaezn01@educantabria.es
 description: >- # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  Una descripcion realmente asombrosa.
+  Mas descripcion en la segunda linea.
+  Y aun mas descripcion en la tercera linea.
+  Y asi hasta el infinito y mas alla.
+  Ya no se que mas poner.
+  Creo que con esto es suficiente.
+  Espero que te guste mi sitio web.
+  Disfrutalo mucho.
+  Gracias por visitarlo.
+  Vuelve pronto.
+  Adios.
+  :)
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
-twitter_username: jekyllrb
-github_username:  jekyll
+twitter_username: elonmusk
+github_username:  kamplen3
 
 # Build settings
 theme: minima
